fixed margins and other spacing

--- a/css/blog.css
+++ b/css/blog.css
@@ -7,18 +7,22 @@ body{
 
 .flex-container {
   display: flex;
-  max-height: 300px;
   justify-content: center;
   padding-top: 25px;
   padding-bottom: 20px;
   background-color: #E7E7E7;
+  flex-wrap: wrap;
 }
 
 .books {
+	display: flex;
 	justify-content: center;
 	padding: 20px;
 	background-color: #c5c6c6;
 	align-content: center;
+	flex-wrap: wrap;
+	padding-bottom: 20px;
+	margin: 10px;
 }
 
 header{
